# tensorflow

./: .bazelrc  .gitignore
tensorflow/core/kernels/: control_flow_ops.cc
tensorflow/core/user_ops/: dotlut_op.cc  matmul_lut_op.cc  matmul_naive_op.cc
tensorflow/examples/conv2d_lut/: BUILD  conv2d_lut_op_kernel.cc  conv2d_lut_op_kernel.h  conv2d_lut_test.py
tensorflow/examples/conv2d_lut/kernels/: conv2d_lut.h  conv2d_lut_op_kernel.cc  conv2d_lut_op_kernel.h  eigen_spatial_convolutions_lut-inl.h
tensorflow/examples/conv2d_lut/ops/: conv2d_lut_op.cc
tensorflow/examples/lut_ops/: BUILD  conv2d_lut_op.py  conv2d_lut_test.py  lut_ops.py  matmul_lut_test.py
tensorflow/examples/lut_ops/kernels/: conv2d_lut.h  conv2d_lut_op_kernel.cc  conv2d_lut_op_kernel.h  eigen_matmul_lut-inl.h  eigen_matmul_naive-inl.h  (+5 more)
tensorflow/examples/lut_ops/tests/benchmarks/: CMakeLists.txt
tensorflow/examples/lut_ops/tests/benchmarks/src/: benchmarks.cpp  defines.h  lookup_table.h  main.cpp  test_data.h
tensorflow/examples/my_composite_op/: BUILD  my_composite_op.cc
tensorflow/examples/my_custom_op/: BUILD  main.cc  matmul_lut_op_benchmark.cc  matmul_lut_op_test.cc  matmul_naive_op_benchmark.cc  matmul_naive_op_test.cc  my_matmul_benchmark.py
tensorflow/examples/parameter_estimation/: BUILD  estimate_params_from_wav.cc  estimate_params_from_wav.h  main.cc
tensorflow/lite/: BUILD
tensorflow/lite/profiling/: BUILD
tensorflow/python/kernel_tests/: control_flow_ops_py_test.py
tensorflow/tools/ci_build/: ci_parameterized_build.sh
tensorflow/tools/git/: gen_git_source.py
(+10 files in other folders)
